# Sobel_with_OpenMP

./: CMakeLists.txt  README.md  sobel.cpp  sobel.cu
include/: sobel.h
